cmake_minimum_required(VERSION 3.15)
project(cplusplus_base)

set(CMAKE_CXX_STANDARD 14)

add_executable(cplusplus_base main.cpp)
add_executable(duotai duotai/duotai.cpp)
add_executable(string string/teststring.cpp)
add_executable(template template/template.cpp)
add_executable(const const/const_summed_up.cpp)
add_executable(casttype casttype.cpp)
add_executable(function Funtion.cpp)
add_executable(functionoverloading FunctionOverloading.h FunctionOverloading.cpp)
add_executable(namespaces namespace_demo.h namespace_demo.cpp)
add_executable(friend friend/friends.cpp)
add_executable(duotai_extend duotai_extend.cpp)
add_executable(object_size object_size.cpp)
add_executable(extend extend.cpp)